# appgithubaction

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: MathOperation.py
test/: TestOperation.py
