[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appgithubaction"
version = "0.1.0"
description = "A Python project with math operations"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "pytest",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "Test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
